--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
 	<meta charset="utf-8">
 </head>
 <body>
-
-	
-
+<div id="pageAlign">
+	<div id="infoBar">
+		<div class="infoLeft">
+			<a href="#" class="vk_link"></a>
+			<a href="#" class="g_link"></a>
+		</div>
+		<div class="infoRight">
+			<div class="number"></div>
+			<a href="#" class="callMe"></a>
+		</div>
+	</div>
+</div>
+</div>
 </body>
 </html>
