--- a/index.html
+++ b/index.html
@@ -7,26 +7,18 @@
 <body>
 
 <div id="main">
-
-
-<div id="content">
- <div id="">
-</div>
-
-
-<div id="pageAlign">
 	<div id="infoBar">
-		<div class="infoLeft">
-			<a href="#" class="vk_link"></a>
-			<a href="#" class="g_link"></a>
-		</div>
-		<div class="infoRight">
-			<div class="number"></div>
-			<a href="#" class="callMe"></a>
+		<div id="infoBarAlign">
+			<div class="infoLeft">
+				<a href="#" class="vk_link"></a>
+				<a href="#" class="g_link"></a>
+			</div>
+			<div class="infoRight">
+				<div class="number">+7 (983)581-6266</div>
+				<a href="#" class="callMe">Заказать обратный звонок</a>
+			</div>
 		</div>
 	</div>
 </div>
-</div>
-
 </body>
 </html>
