--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Экотрин</title>
 	<link rel="stylesheet" type="text/css" href="../www/style/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -15,8 +16,14 @@
 			</div>
 			<div class="infoRight">
 				<div class="number">+7 (983)581-6266</div>
-				<a href="#" class="callMe">Заказать обратный звонок</a>
+				<a href="#" class="callMe"><img src="../www/images/phone.png">Обратная связь</a>
 			</div>
+		</div>
+	</div>
+	<div id="nav">
+		<div class="navAlign">
+			<div class="navLeft"></div>
+			<div class="navRight"></div>
 		</div>
 	</div>
 </div>
