--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Экотрин</title>
 	<link rel="stylesheet" type="text/css" href="../www/style/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -20,10 +20,19 @@
 			</div>
 		</div>
 	</div>
-	<div id="nav">
-		<div class="navAlign">
-			<div class="navLeft"></div>
-			<div class="navRight"></div>
+	<div id="headAndNav">
+		<div class="headAndNavAlign">
+			<a href="#" class="logoLeft"></a>
+			<nav>
+				<ul>
+					<li><a href="#">Услуги</a></li>
+					<li><a href="#">Магазин</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="#">Учебный центр</a></li>
+					<li><a href="#">Отзывы</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
 		</div>
 	</div>
 </div>
